# samsungtv

./: Cargo.toml  README.md  deploy.sh
docs/specs/: cli.md
src/: config.rs  keys.rs  main.rs  rest.rs  wol.rs  ws.rs
