[package]
name = "samsungtv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
libc = "0.2.186"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.26"

[profile.release]
lto = "thin"
strip = true
